ARGO-2098 Implement weights resource with CRUD functionality
