# doc/swagger/swagger.yaml
@@ -1347,6 +1347,197 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Status_error'
+            
+  
+  /weights/{PROFILE_ID}:
+    get:
+      summary: List a specific weights resource
+      operationId: weights.ListOne
+      description: List one specific weights resource targeted by it's unique id
+      tags:
+        - Weights
+      produces:
+        - "application/json"
+      parameters:
+        - $ref: "#/parameters/apiKey"
+        - name: "PROFILE_ID"
+          in: "path"
+          description: "id of the weights resource"
+          required: true
+          type: string
+      responses:
+        '200':
+          description: A list with a weights resource
+          schema:
+            $ref: '#/definitions/Weights_list'
+        '401':
+          description: Unauthorized user
+          schema:
+            $ref: '#/definitions/Status_error'
+        '404':
+          description: Item not found
+          schema:
+            $ref: '#/definitions/Status_error'
+        '406':
+          description: Content Not acceptable
+          schema:
+            $ref: '#/definitions/Status_error'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Status_error'
+    put:
+      summary: update an existing weights resource
+      operationId: weights.Update
+      description: update information on a specific weights resource which is targeted by it's unique id
+      tags:
+        - Weights
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - $ref: "#/parameters/apiKey"
+        - name: "PROFILE_ID"
+          in: "path"
+          description: "id of the weights resource"
+          required: true
+          type: string
+        - name: "weights_resource"
+          in: "body"
+          description: "Json description of the weight_resource to be updated"
+          required: true
+          schema:
+            $ref: '#/definitions/Weights'
+      responses:
+        '201':
+          description: Weights resource Updated
+          schema:
+            $ref: '#/definitions/Status'
+        '400':
+          description: Bad request due to malformed JSON in put body
+          schema:
+            $ref: '#/definitions/Status_error'
+        '401':
+          description: Unauthorized user
+          schema:
+            $ref: '#/definitions/Status_error'
+        '404':
+          description: Item not found
+          schema:
+            $ref: '#/definitions/Status_error'
+        '406':
+          description: Content Not acceptable
+          schema:
+            $ref: '#/definitions/Status_error'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Status_error'
+    delete:
+      summary: Delete a weights resource
+      operationId: weights.Delete
+      description: Delete a specific weights resource which is targeted by it's unique id
+      tags:
+        - Weights
+      produces:
+        - "application/json"
+      parameters:
+        - $ref: "#/parameters/apiKey"
+        - name: "PROFILE_ID"
+          in: "path"
+          description: "id of the weights resource"
+          required: true
+          type: string
+      responses:
+        '200':
+          description: Weights resource deleted
+          schema:
+            $ref: '#/definitions/Status'
+        '401':
+          description: Unauthorized user
+          schema:
+            $ref: '#/definitions/Status_error'
+        '404':
+          description: Item not found
+          schema:
+            $ref: '#/definitions/Status_error'
+        '406':
+          description: Content Not acceptable
+          schema:
+            $ref: '#/definitions/Status_error'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Status_error'
+
+  /weights:
+    get:
+      summary: List all weight resource
+      operationId: weights.List
+      description: List available weight resources
+      tags:
+        - Weights
+      produces:
+        - "application/json"
+      parameters:
+        - $ref: "#/parameters/apiKey"
+      responses:
+        '200':
+          description: A list of weights resources
+          schema:
+            $ref: '#/definitions/Weights_list'
+        '401':
+          description: Unauthorized user
+          schema:
+            $ref: '#/definitions/Status_error'
+        '406':
+          description: Content Not acceptable
+          schema:
+            $ref: '#/definitions/Status_error'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Status_error'
+    post:
+      summary: Create a new weights resource
+      operationId: weights.Create
+      description: Create a new weights resource that includes mapping of groups and weights to be used through a computation
+      tags:
+        - Weights
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "weights_resource"
+          in: "body"
+          description: "Json description of the weights resource to be created"
+          required: true
+          schema:
+            $ref: '#/definitions/Weights'
+        - $ref: "#/parameters/apiKey"
+      responses:
+        '200':
+          description: Weights resource Created
+          schema:
+            $ref: '#/definitions/Self_reference'
+        '400':
+          description: Bad request due to malformed JSON in post body
+          schema:
+            $ref: '#/definitions/Status_error'
+        '401':
+          description: Unauthorized user
+          schema:
+            $ref: '#/definitions/Status_error'
+        '406':
+          description: Content Not acceptable
+          schema:
+            $ref: '#/definitions/Status_error'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Status_error'
 
   /topology/{report_name}:
     get:
@@ -3234,6 +3425,17 @@ definitions:
               type: string
             details:
               type: string
+              
+              
+  Weights_list:
+    type: object
+    properties:
+      status:
+       $ref: '#/definitions/Status'
+      data:
+        type: array
+        items:
+          $ref: '#/definitions/Weights'
 
   Thresholds_profile_list:
     type: object
@@ -3429,6 +3631,31 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/Operation'
+          
+  Weights:
+    type: object
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      weight_type:
+        type: string
+      group_type:
+        type: string
+      groups:
+        type: array
+        items:
+          $ref: '#/definitions/GroupWeight'
+
+  GroupWeight:
+    type: object
+    properties:
+      name: 
+        type: string
+      value:
+        type: number
+    
 
   Operations_profile:
     type: object
